--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
